typescript/checker/tests/conformance/parser/ecmascript5/MissingTokens/parserMissingToken2.ts.stderr
error: Unterminated regexp literal
 --> $DIR/tests/conformance/parser/ecmascript5/MissingTokens/parserMissingToken2.ts:1:1
  |
1 | / b;
  | ^^^^

